--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,16 +22,20 @@ android {
         }
     }
 
-    productFlavors{
-        demo{
+    productFlavors {
+        demo {
             applicationId "moises.com.testdeploy.demo"
             version "1.0-demo"
         }
 
-        full{
+        full {
             applicationId "moises.com.testdeploy.full"
             version "1.0-full"
         }
+    }
+    sourceSets {
+        demo { java.srcDirs = ['src/demo/java', 'src/demo/java/'] }
+        full { java.srcDirs = ['src/full/java', 'src/full/java/'] }
     }
 }
 
